crates/trunk-ir/src/dialect/snapshots/trunk_ir__dialect__core__canonicalize_tests__unrealized_cast_identity_drops_same_type_cast.snap
---
source: crates/trunk-ir/src/dialect/core.rs
expression: "print_module(&ctx, module.op())"
---
core.module @test {
  func.func @f(%0: core.i32) -> core.i32 {
      func.return %0
  }
}
