crates/trunk-ir/src/dialect/snapshots/trunk_ir__dialect__core__canonicalize_tests__unrealized_cast_round_trip_collapses_pair.snap
---
source: crates/trunk-ir/src/dialect/core.rs
expression: "print_module(&ctx, module.op())"
---
core.module @test {
  func.func @f(%0: core.i64) -> core.i64 {
      %1 = core.unrealized_conversion_cast %0 : core.i32
      func.return %0
  }
}
